Bug 1224669 - Clamp width to be non-negative during intrinsic width calculation. r=dholbert